--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Weather-App",
+  "name": "Web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
+    "hbs": "^4.0.1",
+    "nodemon": "^1.19.4",
     "request": "^2.88.0"
   }
 }
